docs[style]: remove classname part 2

--- a/src/pages/components/checkbox/style.mdx
+++ b/src/pages/components/checkbox/style.mdx
@@ -8,14 +8,14 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                     | Property         | Color token       |
-| ------------------------- | ---------------- | ----------------- |
-| `.bx--label`              | text color       | `$text-secondary` |
-| `.bx--checkbox-label`     | text color       | `$text-primary`   |
-| `.bx--checkbox`           | border           | `$icon-primary`   |
-| `.bx--checkbox:unchecked` | background-color | transparent       |
-| `.bx--checkbox:checked`   | background-color | `$icon-primary`   |
-| `.bx--checkbox:checked`   | checkmark        | `$text-inverse`   |
+| Element            | Property         | Color token       |
+| ------------------ | ---------------- | ----------------- |
+| Group label        | text color       | `$text-secondary` |
+| Checkbox label     | text color       | `$text-primary`   |
+| Checkbox:unchecked | border           | `$icon-primary`   |
+|                    | background-color | transparent       |
+| Checkbox:checked   | background-color | `$icon-primary`   |
+|                    | checkmark        | `$text-inverse`   |
 
 <Row>
 <Column colLg={8}>
@@ -27,11 +27,12 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Interactive states
 
-| State       | Property   | Color token      |
-| ----------- | ---------- | ---------------- |
-| `:focus`    | border     | `$focus`         |
-| `:disabled` | text color | `$text-disabled` |
-| `:disabled` | border     | `$icon-disabled` |
+| Element           | Property   | Color token      |
+| ----------------- | ---------- | ---------------- |
+| Checkbox:focus    | border     | `$focus`         |
+| Label:disabled    | text color | `$text-disabled` |
+| Checkbox:disabled | border     | `$icon-disabled` |
+|                   | background | `$icon-disabled` |
 
 <Row>
 <Column colLg={8}>
@@ -53,14 +54,15 @@ and any proper nouns capitalized. Checkbox labels should not exceed three words.
 
 ## Structure
 
-| Class                                 | Property       | px / rem | Spacing token |
-| ------------------------------------- | -------------- | -------- | ------------- |
-| `.bx--checkbox`                       | height & width | 16px     | –             |
-| `.bx--checkbox`                       | border         | 1px      | –             |
-| `.bx--checkbox:focus`                 | border         | 2px      | –             |
-| `.bx--label`                          | margin-bottom  | 8 / 0.5  | `$spacing-03` |
-| `.bx--checkbox-label`                 | padding-left   | 8 / 0.5  | `$spacing-03` |
-| `.bx--form-item.bx--checkbox-wrapper` | margin-bottom  | 8 / 0.5  | `$spacing-03` |
+| Element        | Property       | px / rem | Spacing token |
+| -------------- | -------------- | -------- | ------------- |
+| Checkbox       | height & width | 16px     | –             |
+|                | border         | 1px      | –             |
+| Checkbox:focus | border         | 2px      | –             |
+|                | border inset   | 1px      | –             |
+| Group label    | margin-bottom  | 8 / 0.5  | `$spacing-03` |
+| Checkbox label | padding-left   | 8 / 0.5  | `$spacing-03` |
+| Checkbox item  | margin-bottom  | 4 / 0.25 | `$spacing-02` |
 
 <div className="image--fixed">
 
