--- a/src/pages/components/modal/style.mdx
+++ b/src/pages/components/modal/style.mdx
@@ -11,15 +11,15 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 Refer to the [button](/components/button/style) for primary and secondary button
 styling in the transactional modal.
 
-| Class                        | Property         | Color token       |
-| ---------------------------- | ---------------- | ----------------- |
-| `.bx--modal-container`       | background-color | `$layer` \*       |
-| `.bx--modal-header__label`   | text color       | `$text-secondary` |
-| `.bx--modal-header__heading` | text color       | `$text-primary`   |
-| `.bx--modal-content`         | text color       | `$text-primary`   |
-| `.bx--modal-close__icon`     | fill             | `$icon-primary`   |
-| `.bx--modal-close:hover`     | background-color | `$layer-hover` \* |
-| Overlay                      | color            | `$overlay`        |
+| Elements         | Property         | Color token       |
+| ---------------- | ---------------- | ----------------- |
+| Container        | background-color | `$layer` \*       |
+| Header label     | text color       | `$text-secondary` |
+| Header           | text color       | `$text-primary`   |
+| Content          | text color       | `$text-primary`   |
+| Close icon       | fill             | `$icon-primary`   |
+| Close icon:hover | background-color | `$layer-hover` \* |
+| Page overlay     | color            | `$overlay`        |
 
 <Caption>
   * Denotes a contextual color token that will change values based on the layer
@@ -39,16 +39,16 @@ headings concise and to the point. Modal labels are optional.
 
 ## Structure
 
-| Class                      | Property                  | px / rem | Spacing token |
-| -------------------------- | ------------------------- | -------- | ------------- |
-| `.bx--modal-close`         | height, width             | 48 x 48  | –             |
-| `.bx--modal-close__icon`   | height, width             | 16 x 16  | –             |
-| `.bx--modal-header__label` | margin-bottom             | 4 / 0.25 | `$spacing-02` |
-| `.bx--modal-header`        | padding top, padding left | 16 / 1   | `$spacing-05` |
-| `.bx--modal-header`        | margin-bottom             | 16 / 1   | `$spacing-05` |
-| `.bx--modal-content`       | padding-left              | 16 / 1   | `$spacing-05` |
-| `.bx--modal-content`       | padding-right             | 20%      | –             |
-| `.bx--modal-content`       | margin-bottom             | 48 / 3   | `$spacing-09` |
+| Element      | Property                  | px / rem | Spacing token |
+| ------------ | ------------------------- | -------- | ------------- |
+| Close button | height, width             | 48 x 48  | –             |
+| Close icon   | height, width             | 16 x 16  | –             |
+| Header label | margin-bottom             | 4 / 0.25 | `$spacing-02` |
+| Header       | padding top, padding left | 16 / 1   | `$spacing-05` |
+|              | margin-bottom             | 16 / 1   | `$spacing-05` |
+| Content      | padding-left              | 16 / 1   | `$spacing-05` |
+|              | padding-right             | 20%      | –             |
+|              | margin-bottom             | 48 / 3   | `$spacing-09` |
 
 <div className="image--fixed">
 
