--- a/src/pages/components/number-input/style.mdx
+++ b/src/pages/components/number-input/style.mdx
@@ -8,13 +8,13 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                              | Property         | Color token         |
-| ---------------------------------- | ---------------- | ------------------- |
-| `.bx--label`                       | text color       | `$text-secondary`   |
-| `.bx--number input[type='number']` | text color       | `$text-primary`     |
-| `.bx--number`                      | background-color | `$field` \*         |
-| `.bx--number`                      | border-bottom    | `$border-strong` \* |
-| `.bx--number__controls`            | svg color        | `$icon-primary`     |
+| Element  | Property         | Color token         |
+| -------- | ---------------- | ------------------- |
+| Label    | text color       | `$text-secondary`   |
+| Number   | text color       | `$text-primary`     |
+| Field    | background-color | `$field` \*         |
+|          | border-bottom    | `$border-strong` \* |
+| Controls | svg color        | `$icon-primary`     |
 
 <Caption>
   * Denotes a contextual color token that will change values based on the layer
@@ -31,17 +31,17 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Interactive states
 
-| Class                                       | Property         | Color token      |
-| ------------------------------------------- | ---------------- | ---------------- |
-| `.bx--number:focus`                         | border           | `$focus`         |
-| `.bx--number__controls:focus`               | border           | `$focus`         |
-| `[data-invalid]`                            | border           | `$support-error` |
-| `[data-invalid]:focus`                      | color            | `$support-error` |
-| `.bx--form-requirement`                     | text color       | `$support-error` |
-| `.bx--label:disabled`                       | text color       | `$text-disabled` |
-| `.bx--number:disabled`                      | background-color | `$field` \*      |
-| `.bx--number:disabled`                      | border-bottom    | transparent      |
-| `.bx--number input[type='number']:disabled` | text color       | `$text-disabled` |
+| Element        | Property         | Color token      |
+| -------------- | ---------------- | ---------------- |
+| Field:focus    | border           | `$focus`         |
+| Controls:focus | border           | `$focus`         |
+| Field:invalid  | border           | `$support-error` |
+| Error icon     | color            | `$support-error` |
+| Error message  | text color       | `$support-error` |
+| Label:disabled | text color       | `$text-disabled` |
+| Field:disabled | background-color | `$field` \*      |
+|                | border-bottom    | transparent      |
+| Number         | text color       | `$text-disabled` |
 
 ## Typography
 
@@ -59,13 +59,13 @@ phrase and any proper nouns capitalized.
 The add and subtract icons can be found in the
 [icons](/guidelines/icons/library) library.
 
-| Class                              | Property                    | px / rem | Spacing token |
-| ---------------------------------- | --------------------------- | -------- | ------------- |
-| `.bx--label`                       | margin-bottom               | 8 / 0.5  | `$spacing-03` |
-| `.bx--number input`                | height                      | 40 / 2.5 | –             |
-| `.bx--number input[type='number']` | padding-left                | 16 / 1   | `$spacing-05` |
-| `.bx--number__controls`            | padding-left, padding-right | 16 / 1   | `$spacing-05` |
-| `.bx--number`                      | border-bottom               | 1px      | –             |
+| Element         | Property                    | px / rem | Spacing token |
+| --------------- | --------------------------- | -------- | ------------- |
+| Label           | margin-bottom               | 8 / 0.5  | `$spacing-03` |
+| Field (default) | height                      | 40 / 2.5 | –             |
+|                 | border-bottom               | 1px      | –             |
+| Number          | padding-left                | 16 / 1   | `$spacing-05` |
+| Controls        | padding-left, padding-right | 16 / 1   | `$spacing-05` |
 
 <div className="image--fixed">
 
