--- a/src/pages/components/loading/style.mdx
+++ b/src/pages/components/loading/style.mdx
@@ -8,18 +8,19 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                  | Property         | Color token    |
-| ---------------------- | ---------------- | -------------- |
-| `.bx--loading__svg`    | stroke           | `$interactive` |
-| `.bx--loading--small`  | stroke           | `$interactive` |
-| `.bx--loading-overlay` | background-color | `$overlay`     |
+| Element       | Property         | Color token    |
+| ------------- | ---------------- | -------------- |
+| Large spinner | stroke           | `$interactive` |
+| Small spinner | stroke           | `$interactive` |
+|               | background       | `$layer-01`    |
+| Page overlay  | background-color | `$overlay`     |
 
 ## Structure
 
-| Class                 | Property      | px / rem | Spacing token |
-| --------------------- | ------------- | -------- | ------------- |
-| `.bx--loading`        | height, width | 88 / 5.5 | –             |
-| `.bx--loading--small` | height, width | 16 / 1   | –             |
+| Element       | Property      | px / rem | Spacing token |
+| ------------- | ------------- | -------- | ------------- |
+| Large spinner | height, width | 88 / 5.5 | –             |
+| Small spinner | height, width | 16 / 1   | –             |
 
 <div className="image--fixed">
 
