docs(style): remove classnames part 3

--- a/src/pages/components/overflow-menu/style.mdx
+++ b/src/pages/components/overflow-menu/style.mdx
@@ -8,13 +8,13 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                                        | Property         | Color token                      |
-| -------------------------------------------- | ---------------- | -------------------------------- |
-| `.bx--overflow-menu__icon`                   | fill             | `$icon-primary`                  |
-| `.bx--overflow-menu-options`                 | background-color | `$layer`                         |
-| `.bx--overflow-menu-options__btn`            | color            | `$text-secondary`                |
-| `.bx--overflow-menu-options__option--danger` | background-color | `$layer`                         |
-| `.bx--overflow-menu-options`                 | box-shadow       | `0 2px 6px 0 rgba(0, 0, 0, 0.3)` |
+| Element            | Property         | Color token                      |
+| ------------------ | ---------------- | -------------------------------- |
+| Overflow menu icon | fill             | `$icon-primary`                  |
+| Menu option        | background-color | `$layer`                         |
+|                    | text color       | `$text-secondary`                |
+| Danger option      | background-color | `$layer`                         |
+| Container          | box-shadow       | `0 2px 6px 0 rgba(0, 0, 0, 0.3)` |
 
 ### Interactive states
 
