overflow and pagination

--- a/src/pages/components/overflow-menu/style.mdx
+++ b/src/pages/components/overflow-menu/style.mdx
@@ -18,15 +18,15 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Interactive states
 
-| Class                      | Property         | Color token            |
-| -------------------------- | ---------------- | ---------------------- |
-| `.bx--overflow-menu:focus` | border           | `$focus`               |
-| `option:focus`             | border           | `$focus`               |
-| `.bx--overflow-menu:hover` | background-color | `$background-hover`    |
-| `option:hover`             | background-color | `$layer-hover`         |
-| `option:hover`             | text color       | `$text-primary`        |
-| `option--danger:hover`     | background-color | `$button-danger-hover` |
-| `option:disabled`          | text color       | `$text-disabled`       |
+| Element              | Property         | Color token            |
+| -------------------- | ---------------- | ---------------------- |
+| Icon button:focus    | border           | `$focus`               |
+| Menu option:focus    | border           | `$focus`               |
+| Icon button:hover    | background-color | `$background-hover`    |
+| Menu option:hover    | background-color | `$layer-hover`         |
+|                      | text color       | `$text-primary`        |
+| Danger option:hover  | background-color | `$button-danger-hover` |
+| Menu option:disabled | text color       | `$text-disabled`       |
 
 <div className="image--fixed">
 
@@ -51,12 +51,11 @@ The height of an overflow menu is determined by the amount of content in the
 menu. The overflow menu icon can be found in the
 [icons](/guidelines/icons/library) library.
 
-| Class                                        | Property                    | px / rem  | Spacing token |
-| -------------------------------------------- | --------------------------- | --------- | ------------- |
-| `.bx--overflow-menu__icon`                   | icon size                   | 16 x 16px | –             |
-| `.bx--overflow-menu-options__btn`            | padding-right, padding-left | 16 / 1    | `$spacing-05` |
-| `.bx--overflow-menu-options`                 | height                      | 32 / 2    | –             |
-| `.bx--overflow-menu-options__option--danger` | border-top                  | 1px       | –             |
+| Element     | Property                    | px / rem  | Spacing token |
+| ----------- | --------------------------- | --------- | ------------- |
+| Icon        | icon size                   | 16 x 16px | –             |
+| Menu option | padding-right, padding-left | 16 / 1    | `$spacing-05` |
+| Divider     | border-top                  | 1px       | –             |
 
 <div className="image-fixed">
 
