docs(v11): update to include beta articles

--- a/src/pages/whats-happening/v11-release/index.mdx
+++ b/src/pages/whats-happening/v11-release/index.mdx
@@ -60,6 +60,30 @@ brand-driven product redesigns.
 <Row>
 <Column colLg={4} colMd={4} noGutterMdLeft>
 <ArticleCard
+    title="Carbon v11 Beta 3"
+    author="Josh Black"
+    date="December 10th, 2021"
+    href="https://medium.com/carbondesign/carbon-v11-beta-3-9b6be61bb2af"
+    >
+
+![Carbon v11 Beta 3](images/carbon_2021-beta-3.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    title="Carbon v11 Beta 2"
+    author="Josh Black"
+    date="September 23, 2021"
+    href="https://medium.com/carbondesign/carbon-v11-beta-2-7d0aa4e732d1"
+    >
+
+![Carbon v11 Beta 2](images/carbon_2021-beta-2.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
     title="Carbon v11 Beta 1"
     author="Josh Black"
     date="August 6, 2021"
@@ -79,18 +103,6 @@ brand-driven product redesigns.
     >
 
 ![Carbon’s 2021 release: April update](images/carbon_2021-april-update.png)
-
-</ArticleCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterMdLeft>
-<ArticleCard
-    title="What’s coming to Carbon in 2021"
-    author="Josh Black"
-    date="November 12, 2020"
-    href="https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a"
-    >
-
-![Carbon 2021 release](images/carbon_2021.png)
 
 </ArticleCard>
 </Column>
