docs(style): remove classnames part 3

--- a/src/pages/components/overflow-menu/style.mdx
+++ b/src/pages/components/overflow-menu/style.mdx
@@ -11,10 +11,15 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Element            | Property         | Color token                      |
 | ------------------ | ---------------- | -------------------------------- |
 | Overflow menu icon | fill             | `$icon-primary`                  |
-| Menu option        | background-color | `$layer`                         |
+| Menu option        | background-color | `$layer` \*                      |
 |                    | text color       | `$text-secondary`                |
-| Danger option      | background-color | `$layer`                         |
+| Danger option      | background-color | `$layer`\*                       |
 | Container          | box-shadow       | `0 2px 6px 0 rgba(0, 0, 0, 0.3)` |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 ### Interactive states
 
@@ -23,7 +28,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Icon button:focus    | border           | `$focus`               |
 | Menu option:focus    | border           | `$focus`               |
 | Icon button:hover    | background-color | `$background-hover`    |
-| Menu option:hover    | background-color | `$layer-hover`         |
+| Menu option:hover    | background-color | `$layer-hover` \*      |
 |                      | text color       | `$text-primary`        |
 | Danger option:hover  | background-color | `$button-danger-hover` |
 | Menu option:disabled | text color       | `$text-disabled`       |
