--- a/src/pages/components/select/style.mdx
+++ b/src/pages/components/select/style.mdx
@@ -8,15 +8,15 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                 | Property      | Color token         |
-| --------------------- | ------------- | ------------------- |
-| `.bx--select-input`   | background    | `$field` \*         |
-| `.bx--select-input`   | border-bottom | `$border-strong` \* |
-| `.bx--select--inline` | background    | transparent         |
-| `.bx--label`          | text color    | `$text-primary`     |
-| `.bx--select-input`   | text color    | `$text-primary`     |
-| `.bx--select--inline` | text color    | `$icon-primary`     |
-| `.bx--select__arrow`  | fill          | `$icon-primary`     |
+| Element       | Property      | Color token         |
+| ------------- | ------------- | ------------------- |
+| Field         | background    | `$field` \*         |
+|               | border-bottom | `$border-strong` \* |
+| Inline select | background    | transparent         |
+| Label         | text color    | `$text-primary`     |
+| Field text    | text color    | `$text-primary`     |
+| Helper text   | text color    | `$text-helper`      |
+| Icon          | fill          | `$icon-primary`     |
 
 <Caption>
   * Denotes a contextual color token that will change values based on the layer
@@ -33,14 +33,14 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Interaction states
 
-| Class                             | Property      | Color token      |
-| --------------------------------- | ------------- | ---------------- |
-| `.bx--select-input:focus`         | border        | `$focus`         |
-| `.bx--select-input[data-invalid]` | border        | `$support-error` |
-| `.bx--form-requirement`           | text color    | `$support-error` |
-| `.bx--select-input:disabled`      | background    | `$field` \*      |
-| `.bx--select-input:disabled`      | border-bottom | transparent      |
-| `.bx--select-input:disabled`      | text color    | `$text-disabled` |
+| Element             | Property      | Color token      |
+| ------------------- | ------------- | ---------------- |
+| Input:focus         | border        | `$focus`         |
+| Input:invalid       | border        | `$support-error` |
+| Error message       | text color    | `$support-error` |
+| Input:disabled      | background    | `$field` \*      |
+|                     | border-bottom | transparent      |
+| Field text:disabled | text color    | `$text-disabled` |
 
 <div className="image--fixed">
 
@@ -65,13 +65,12 @@ and any proper nouns capitalized. Select text should be three words or less.
 
 ### Select
 
-| Class                     | Property                    | px / rem | Spacing token |
-| ------------------------- | --------------------------- | -------- | ------------- |
-| `.bx--label`              | margin-bottom               | 8 / 0.5  | `$spacing-03` |
-| `.bx--select-input`       | padding-left                | 16 / 1   | `$spacing-05` |
-| `.bx--select__arrow`      | padding-left, padding-right | 16 / 1   | `$spacing-05` |
-| `.bx--select-input`       | border-bottom               | 1px      | –             |
-| `.bx--select-input:focus` | border                      | 2px      | –             |
+| Element | Property                    | px / rem | Spacing token |
+| ------- | --------------------------- | -------- | ------------- |
+| Label   | margin-bottom               | 8 / 0.5  | `$spacing-03` |
+| Input   | padding-left                | 16 / 1   | `$spacing-05` |
+| Arrow   | padding-left, padding-right | 16 / 1   | `$spacing-05` |
+| Field   | border-bottom               | 1px      | –             |
 
 <div className="image--fixed">
 
@@ -83,10 +82,10 @@ and any proper nouns capitalized. Select text should be three words or less.
 
 ### Inline select
 
-| Class                | Property                    | px / rem | Spacing token |
-| -------------------- | --------------------------- | -------- | ------------- |
-| `.bx--select-input`  | padding-left                | 8 / 0.5  | `$spacing-03` |
-| `.bx--select__arrow` | padding-left, padding-right | 8 / 0.5  | `$spacing-03` |
+| Element | Property                    | px / rem | Spacing token |
+| ------- | --------------------------- | -------- | ------------- |
+| Input   | padding-left                | 8 / 0.5  | `$spacing-03` |
+| Arrow   | padding-left, padding-right | 8 / 0.5  | `$spacing-03` |
 
 <div className="image--fixed">
 
