--- a/src/pages/components/progress-indicator/style.mdx
+++ b/src/pages/components/progress-indicator/style.mdx
@@ -14,14 +14,15 @@ checkmark. The current step the user is on is indicated by a filled circle.
 Steps the user has not encountered yet, or future steps, are indicated by an
 outlined circle.
 
-| Class                                                       | Property         | Color token           |
-| ----------------------------------------------------------- | ---------------- | --------------------- |
-| `.bx--progress-step--complete svg`                          | fill             | `$interactive`        |
-| `.bx--progress-step--incomplete svg`                        | fill             | `$interactive`        |
-| `.bx--progress-step--current` <br/> `.bx--progress-line`    | background-color | `$border-interactive` |
-| `.bx--progress-step--incomplete` <br/> `.bx--progress-line` | background-color | `$border-subtle` \*   |
-| `.bx--progress-label`                                       | text color       | `$text-primary`       |
-| `.bx--progress-optional`                                    | text color       | `$text-secondary`     |
+| Element              | Property         | Color token           |
+| -------------------- | ---------------- | --------------------- |
+| Current icon         | fill             | `$interactive`        |
+| Complete icon        | fill             | `$interactive`        |
+| Incomplete icon      | fill             | `$icon-primary`       |
+| Current step line    | background-color | `$border-interactive` |
+| Incomplete step line | background-color | `$border-subtle` \*   |
+| Label                | text color       | `$text-primary`       |
+| Optional label       | text color       | `$text-secondary`     |
 
 <Caption>
   * Denotes a contextual color token that will change values based on the layer
@@ -30,11 +31,13 @@ outlined circle.
 
 ### Interactive states
 
-| Class                       | Property   | Color token      |
-| --------------------------- | ---------- | ---------------- |
-| `.bx--progress-step:focus`  | border     | `$focus`         |
-| `.bx--progress-label:hover` | text color | `$link-primary`  |
-| `.bx--progress__warning`    | fill       | `$support-error` |
+| Element       | Property         | Color token        |
+| ------------- | ---------------- | ------------------ |
+| Step:focus    | border           | `$focus`           |
+| Label:hover   | text color       | `$link-primary`    |
+| Icon:error    | fill             | `$support-error`   |
+| Icon:disabled | fill             | `$icon-disabled`   |
+| Line:disabled | background-color | `$border-disabled` |
 
 <div className="image--fixed">
 
@@ -58,15 +61,14 @@ label. All labels should be set in sentence case.
 
 ## Structure
 
-The checkmark icon can be found in the [icons](/guidelines/icons/library)
-library.
+All icons can be found in the [icons](/guidelines/icons/library) library.
 
-| Class                    | Property                 | px / rem | Spacing token |
-| ------------------------ | ------------------------ | -------- | ------------- |
-| `.bx--progress-step`     | min-width                | 128 / 8  | –             |
-| `.bx--progress-step svg` | height, width            | 16 / 1   | –             |
-| `.bx--progress-step svg` | margin-top, margin-right | 16 / 1   | `$spacing-05` |
-| `.bx--progress-label`    | margin-top               | 16 / 1   | `$spacing-05` |
+| Element | Property                 | px / rem | Spacing token |
+| ------- | ------------------------ | -------- | ------------- |
+| Step    | min-width                | 128 / 8  | –             |
+| Icon    | height, width            | 16 / 1   | –             |
+|         | margin-top, margin-right | 16 / 1   | `$spacing-05` |
+| Label   | margin-top               | 16 / 1   | `$spacing-05` |
 
 <div className="image--fixed">
 
@@ -78,14 +80,16 @@ library.
   Structure and spacing measurements for progress indicator | px / rem
 </Caption>
 
+<!---
+
 ### Recommended
 
 The following specs are not built into the progress indicator component but are
 recommended by design as the proper amount between progress indicator elements.
 
-| Class           | Property | px / rem | Spacing token |
+| Element           | Property | px / rem | Spacing token |
 | --------------- | -------- | -------- | ------------- |
-| `.bx--progress` | margin   | 16 / 1   | `$spacing-05` |
+| Progress indicator | margin   | 16 / 1   | `$spacing-05` |
 
 <div className="image--fixed">
 
@@ -97,3 +101,5 @@ recommended by design as the proper amount between progress indicator elements.
   Recommended structure and spacing measurements for progress indicator | px /
   rem
 </Caption>
+
+--->
