--- a/src/pages/components/search/style.mdx
+++ b/src/pages/components/search/style.mdx
@@ -12,13 +12,13 @@ Inputs come in two different colors. The default input color is `$field-01` and
 is used on `$ui-background` and `$ui-02` page backgrounds. The `--light` version
 input color is `$field-02` and is used on `$ui-01` page backgrounds.
 
-| Class                            | Property         | Color token         |
-| -------------------------------- | ---------------- | ------------------- |
-| `.bx--search-input`              | background-color | `$field` \*         |
-| `.bx--search-input`              | border-bottom    | `$border-strong` \* |
-| `.bx--search-input`              | text color       | `$text-primary`     |
-| `.bx--search-input::placeholder` | text color       | `$text-placeholder` |
-| `.bx--search-magnifier`          | fill             | `$icon-secondary`   |
+| Element     | Property         | Color token         |
+| ----------- | ---------------- | ------------------- |
+| Field       | background-color | `$field` \*         |
+|             | border-bottom    | `$border-strong` \* |
+| Field text  | text color       | `$text-primary`     |
+| Prompt text | text color       | `$text-placeholder` |
+| Icon        | fill             | `$icon-secondary`   |
 
 <div className="image--fixed">
 
@@ -30,13 +30,13 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 
 ### Interactive colors
 
-| Class                            | Property         | Color token      |
-| -------------------------------- | ---------------- | ---------------- |
-| `.bx--search-input:focus`        | border           | `$focus`         |
-| `.bx--search-input:disabled`     | background-color | `$field` \*      |
-| `.bx--search-input:disabled`     | border-bottom    | transparent      |
-| `.bx--search-input:disabled`     | text color       | `$text-disabled` |
-| `.bx--search-magnifier:disabled` | fill             | `$icon-disabled` |
+| Element             | Property         | Color token      |
+| ------------------- | ---------------- | ---------------- |
+| Input:focus         | border           | `$focus`         |
+| Field:disabled      | background-color | `$field` \*      |
+|                     | border-bottom    | transparent      |
+| Field text:disabled | text color       | `$text-disabled` |
+| Icon:disabled       | fill             | `$icon-disabled` |
 
 <div className="image--fixed">
 
@@ -60,11 +60,11 @@ first word capitalized.
 The width of the search field should appropriately fit the design and layout of
 content.
 
-| Class                                             | Property                    | px / rem | Spacing token |
-| ------------------------------------------------- | --------------------------- | -------- | ------------- |
-| `.bx--search-magnifier` <br/> `.bx--search-close` | height, width               | 16 / 1   | –             |
-| `.bx--search--lg`                                 | padding-left, padding-right | 48 / 3   | `$spacing-09` |
-| `.bx--search--sm`                                 | padding-left, padding-right | 32 / 2   | `$spacing-07` |
+| Element                      | Property                    | px / rem | Spacing token |
+| ---------------------------- | --------------------------- | -------- | ------------- |
+| Search icon <br/> Close icon | height, width               | 16 / 1   | –             |
+| Large field                  | padding-left, padding-right | 48 / 3   | `$spacing-09` |
+| Small field                  | padding-left, padding-right | 32 / 2   | `$spacing-07` |
 
 <div className="image--fixed">
 
