docs(style tab): remove classnames 4

--- a/src/pages/components/structured-list/style.mdx
+++ b/src/pages/components/structured-list/style.mdx
@@ -8,12 +8,12 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                                  | Property      | Color token         |
-| -------------------------------------- | ------------- | ------------------- |
-| `.bx--structured-list-th`              | text color    | `$text-primary`     |
-| `.bx--structured-list-td`              | text color    | `$text-secondary`   |
-| `.bx--structured-list-row--header-row` | border-bottom | `$border-subtle` \* |
-| `.bx--structured-list-row`             | border-bottom | `$border-subtle` \* |
+| Element            | Property      | Color token         |
+| ------------------ | ------------- | ------------------- |
+| Header             | text color    | `$text-primary`     |
+| Row text           | text color    | `$text-secondary`   |
+| Header row divider | border-bottom | `$border-subtle` \* |
+| Row divider        | border-bottom | `$border-subtle` \* |
 
 <Caption>
   * Denotes a contextual color token that will change values based on the layer
@@ -22,12 +22,12 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Interactive states
 
-| Class                                | Property         | Color token            |
-| ------------------------------------ | ---------------- | ---------------------- |
-| `.bx--structured-list-row--selected` | background-color | `$background-selected` |
-| `.bx--structured-list-svg:checked`   | fill             | `$icon-primary`        |
-| `.bx--structured-list-row:hover`     | background-color | `$background-hover`    |
-| `.bx--structured-list-row:focus`     | border           | `$focus`               |
+| Element      | Property         | Color token            |
+| ------------ | ---------------- | ---------------------- |
+| Row:selected | background-color | `$background-selected` |
+| Checkmark    | fill             | `$icon-primary`        |
+| Row:hover    | background-color | `$background-hover`    |
+| Row:focus    | border           | `$focus`               |
 
 ## Typography
 
@@ -41,17 +41,16 @@ set in sentence case. All typography is left aligned.
 
 ## Structure
 
-| Property                   | Property                    | px / rem    | Spacing token |
-| -------------------------- | --------------------------- | ----------- | ------------- |
-| `.bx--structured-list`     | min-width                   | 500 / 31.25 | –             |
-| `.bx--structured-list`     | min-width                   | 500 / 36    | –             |
-| `.bx--structured-list-th`  | padding-top                 | 16 / 1      | `$spacing-05` |
-| `.bx--structured-list-th`  | padding-bottom              | 8 / 0.5     | `$spacing-03` |
-| `.bx--structured-list-th`  | padding-left, padding-right | 16 / 1      | `$spacing-05` |
-| `.bx--structured-list-td`  | padding-top                 | 16 / 1      | `$spacing-05` |
-| `.bx--structured-list-td`  | padding-bottom              | 24 / 1.5    | `$spacing-06` |
-| `.bx--structured-list-td`  | padding-left, padding-right | 16 / 1      | `$spacing-05` |
-| `.bx--structured-list-svg` | height, width               | 16 / 1      | –             |
+| Element         | Property                    | px / rem    | Spacing token |
+| --------------- | --------------------------- | ----------- | ------------- |
+| Structured list | min-width                   | 500 / 31.25 | –             |
+| Header          | padding-top                 | 16 / 1      | `$spacing-05` |
+|                 | padding-bottom              | 8 / 0.5     | `$spacing-03` |
+|                 | padding-left, padding-right | 16 / 1      | `$spacing-05` |
+| Row text        | padding-top                 | 16 / 1      | `$spacing-05` |
+|                 | padding-bottom              | 24 / 1.5    | `$spacing-06` |
+|                 | padding-left, padding-right | 16 / 1      | `$spacing-05` |
+| Icon            | height, width               | 16 / 1      | –             |
 
 <div className="image--fixed">
 
