--- a/src/pages/components/tag/style.mdx
+++ b/src/pages/components/tag/style.mdx
@@ -8,9 +8,11 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-Using the IBM Design Language
-[color palette](https://www.ibm.com/design/language/elements/color), the tag
-text color should be 5 steps away from the tag background color
+Tag uses component level tokens and values the IBM Design Language
+[color palette](https://www.ibm.com/design/language/elements/color). In the
+light themes tags use color step 20 for the background and step 70 for the text.
+In the dark themes, tags use color step 70 for the background and step 20 for
+the text.
 
 | Tag color     | Color token                 |
 | ------------- | --------------------------- |
