--- a/src/pages/components/tile/style.mdx
+++ b/src/pages/components/tile/style.mdx
@@ -8,7 +8,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class          | Property         | Color token       |
+| Element        | Property         | Color token       |
 | -------------- | ---------------- | ----------------- |
 | Tile           | background-color | `$layer` \*       |
 | Tile: focus    | border           | `$focus`          |
@@ -24,11 +24,11 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Structure
 
-| Class | Property          | px / rem | Spacing token |
-| ----- | ----------------- | -------- | ------------- |
-| Tile  | min-height        | 64 / 4   | –             |
-|       | min-width         | 128 / 8  | –             |
-|       | padding (minimum) | 16 / 1   | `$spacing-05` |
+| Element | Property          | px / rem | Spacing token |
+| ------- | ----------------- | -------- | ------------- |
+| Tile    | min-height        | 64 / 4   | –             |
+|         | min-width         | 128 / 8  | –             |
+|         | padding (minimum) | 16 / 1   | `$spacing-05` |
 
 <div className="image--fixed">
 
