--- a/src/pages/components/toggletip/usage.mdx
+++ b/src/pages/components/toggletip/usage.mdx
@@ -67,11 +67,15 @@ interactive trigger element. The two components differ in the way they are
 invoked and dismissed and if the user must interact with the contents. A tooltip
 is exposed on `Hover` or `Focus` when you need to expose brief, supplemental
 information that is not interactive. A toggletip is used on `Click` and `Enter`
-when you need to expose information that a user needs to interact with.
+when you need to expose interactive elements, such as button, that a user needs
+to interact with.
+
+The exception here is that Definition tooltip can be invoked on either hover or
+click depending on use case.
 
 ### When to use
 
-- Use when defining a term or inline item
+- Use when an interactive element must be placed within the popover
 - Use for quick, in context editing
 - Use for filter panels that overlay content
 
@@ -89,24 +93,6 @@ Don't use to present critical information or request required input needed to
 complete a workflow. Use the
 [modal component](https://carbondesignsystem.com/components/modal/usage/)
 instead.
-
-### Variants
-
-Toggletips can be used in many different ways and are not limited to the
-variants listed below.
-
-| Variant                                         | Purpose                                                                                                                                                          |
-| ----------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [Definition toggletip](#definition-toggletip)   | The definition toggletip provides additional help or defines an item or term. It may be used on the label of a UI element, or on a word embedded in a paragraph. |
-| [Interactive toggletip](#interactive-toggletip) | Interactive toggletip allows for interactive elements within the toggletip such as checkboxes, radio buttons, buttons, and links.                                |
-
-<Row>
-<Column colLg={8}>
-
-![Example of defintion toggletip and interactive toggletip](images/toggle-tip-usage-3.png)
-
-</Column>
-</Row>
 
 ## Live demo
 
@@ -160,23 +146,6 @@ UI trigger.
 </Column>
 </Row>
 
-For toggletips that are inline with other text, like a definition toggletip, do
-not obstruct words to the left and right of the trigger word. When the toggletip
-is active, ensure popover overlays other content and is not cut off by other
-surrounding components or bleeds off the page where some content is not visible.
-
-<Row>
-<Column colLg={8}>
-
-![Toggletip placement](images/toggle-tip-usage-7.png)
-
-</Column>
-</Row>
-
-<Caption>
-  Definition toggletips should display above or below interactive element
-</Caption>
-
 Placement of a popover in relation to the trigger depends on the type of popover
 used. Visit the popover component for specific guidelines for no tip, caret tip,
 and tab tip types.
@@ -187,6 +156,11 @@ and tab tip types.
 
 Heading, body, and footer content can vary based on your use case. To see
 examples of content used within toggletips, visit the disclosure pattern.
+
+Interactive tooltips may contain rich text and other interactive elements like
+buttons or links and must remain actively open until a user dismisses the
+toggletip. Maintain accessibility requirements including focus order and ensure
+all functionality is operable through a keyboard interface.
 
 ### Overflow content
 
@@ -242,53 +216,6 @@ trigger element has focus.
 
 NVDA: Users can trigger a toggletip by pressing `Enter` or `Space` while the
 trigger element has focus.
-
-## Definition toggletip
-
-The definition toggletip provides inline additional help or defines a term. It
-may be used on the label of a UI element, on a word embedded in a paragraph, or
-in compact spaces such as data tables where icons clutter the UI. You can use
-definition tooltips on headers, body copy, or labels.
-
-### Best practices
-
-- Should contain brief, read-only text
-- Use on proper nouns, technical terms, or acronyms with two letters or more
-- Do not use a definition tooltip on words with fewer than two letters
-
-<Row>
-<Column colLg={8}>
-
-![Definition toggletip example](images/toggle-tip-usage-9.png)
-
-</Column>
-</Row>
-
-<Caption>Example of a defintion toggletip</Caption>
-
-## Interactive toggletip
-
-Interactive tooltips may contain rich text and other interactive elements like
-buttons or links and must remain actively open until a user dismisses the
-toggletip.
-
-### Best practices
-
-- Maintain
-  [accessibility requirements](https://www.ibm.com/able/requirements/requirements/)
-  including focus order and ensure all functionality is operable through a
-  keyboard interface.
-- Follow disclosure patterns when designing content within a toggletip
-
-<Row>
-<Column colLg={8}>
-
-![Definition toggletip example](images/toggle-tip-usage-10.png)
-
-</Column>
-</Row>
-
-<Caption>Example of an interactive toggletip</Caption>
 
 ## Related
 
