removed definition toggletip
• replaced images
• took out definition toggle tip docs to move to tooltip

--- a/src/pages/components/toggletip/style.mdx
+++ b/src/pages/components/toggletip/style.mdx
@@ -3,13 +3,13 @@ title: Toggletip
 description:
   Toggletips use the disclosure pattern to toggle the visibility of a popover.
   They display additional, hidden information upon the click of a UI trigger
-  element.
+  element and can contain interactive elements.
 tabs: ['Usage', 'Style']
 ---
 
 ## Color
 
-### Interactive Toggletip
+### Toggletip
 
 | element        | property         | color token           |
 | -------------- | ---------------- | --------------------- |
@@ -17,16 +17,6 @@ tabs: ['Usage', 'Style']
 | Trigger button | svg              | `$icon-secondary`     |
 | Container      | background-color | `$background-inverse` |
 | Text           | color            | `$text-inverse`       |
-
-<Row>
-<Column colLg={8}>
-
-![Interactive toggletip colors.](images/toggletip-style-1.png)
-
-</Column>
-</Row>
-
-<Caption>Closed (left) and open (right) interactive toggletip colors</Caption>
 
 **Interactive states**
 
@@ -39,49 +29,10 @@ tabs: ['Usage', 'Style']
 <Row>
 <Column colLg={8}>
 
-![Interactive toggletip interactive colors.](images/toggletip-style-2.png)
+![Toggletip colors and interactive colors.](images/toggletip-style-1.png)
 
 </Column>
 </Row>
-
-<Caption>Hover (left) and focus (right) interactive toggletip states</Caption>
-
-### Definition toggletip
-
-| element   | property         | color token           |
-| --------- | ---------------- | --------------------- |
-| Label     | text color       | `$text-secondary`     |
-| Trigger   | border           | `$border-strong`      |
-| Container | background-color | `$background-inverse` |
-| Text      | color            | `$text-inverse`       |
-
-<Row>
-<Column colLg={8}>
-
-![Definition toggletip colors.](images/toggletip-style-3.png)
-
-</Column>
-</Row>
-
-<Caption>Closed (left) and open (right) definition toggletip colors</Caption>
-
-**Interactive states**
-
-| State  | Element          | Property | Color token           |
-| ------ | ---------------- | -------- | --------------------- |
-| Hover  | trigger          | border   | `$border-interactive` |
-| Active | trigger          | border   | `$border-interactive` |
-| Focus  | label and border | border   | `$focus`              |
-
-<Row>
-<Column colLg={8}>
-
-![Definition toggletip interactive colors.](images/toggletip-style-4.png)
-
-</Column>
-</Row>
-
-<Caption>Hover (left) and focus (right) defintion toggletip states</Caption>
 
 ## Typography
 
@@ -95,7 +46,7 @@ tabs: ['Usage', 'Style']
 All tooltip types have a varying height based on the amount of content they
 contain.
 
-### Interactive toggletip
+### Toggletip
 
 | Element      | Property      | px / rem | Spacing token |
 | ------------ | ------------- | -------- | ------------- |
@@ -107,30 +58,26 @@ contain.
 
 <div className="image--fixed">
 
-![Structure and spacing measurements for an interactive toggletip.](images/toggletip-style-5.png)
+![Structure and spacing measurements for toggletip.](images/toggletip-style-2.png)
 
 </div>
 
-<Caption>
-  Structure and spacing measurements an interactive toggletip. | px / rem
-</Caption>
+<Caption>Structure and spacing measurements toggletip. | px / rem</Caption>
 
-### Definition toggletip
+### Placement
 
-| Element   | Property                    | px / rem | Spacing token |
-| --------- | --------------------------- | -------- | ------------- |
-| Container | max-width                   | 176 / 11 | —             |
-|           | padding-top, padding-bottom | 8 / .5   | `$spacing-04` |
-|           | padding-left, padding-right | 8 / .5   | `$spacing-04` |
-|           | margin-top                  | 4 / 0.25 | `$spacing-02` |
-| Trigger   | border-bottom               | 1 px     | —             |
+Toggletip directions by default are set to auto. Upon opening, toggletips can
+detect the edges of the browser to properly be placed in view so the container
+does not get cutoff. Toggletips can instead use specific directions and may be
+positioned top, right, bottom, or left to the trigger item. Toggletips should be
+placed at least 16px / 1rem off of the bottom of the page and not bleed off page
+or behind other content. On mobile, toggletips can only appear below the
+toggletip UI trigger.
 
 <div className="image--fixed">
 
-![Structure and spacing measurements for a definition toggletip.](images/toggletip-style-6.png)
+![Placement examples for a toggletip](images/toggletip-style-3.png)
 
 </div>
 
-<Caption>
-  Structure and spacing measurements a definition toggletip. | px / rem
-</Caption>
+<Caption>Placement examples for toggletip</Caption>
